force-app/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <description>Gifts represent donations of money, stock, or other value that are tied to specific individuals, households, or organizations.</description>
    <label>Gift</label>
    <nameField>
        <displayFormat>Gift-{0000}</displayFormat>
        <label>Gift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>