force-app/main/default/objects/Gift__c/fields/Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when this gift's acknowledgement or membership letter has been sent to the associated individuals.</description>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>