force-app/main/default/objects/Gift__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <description>This field represents which museum fundraising appeal this gift was made in response to.</description>
    <label>Appeal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gifts_Appeals</valueSetName>
    </valueSet>
</CustomField>