force-app/main/default/objects/Gift__c/fields/Appeal_Year__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Year__c</fullName>
    <description>Use this field to specify the year of the specified appeal.</description>
    <label>Appeal Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>