force-app/main/default/objects/Gift__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>This field represents what museum campaign this gift belongs to.</description>
    <label>Campaign</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gifts_Campaigns</valueSetName>
    </valueSet>
</CustomField>