force-app/main/default/objects/Gift__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <description>This field represents the museum fund that this gift is to be committed to.</description>
    <label>Fund</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gifts_Funds</valueSetName>
    </valueSet>
</CustomField>