force-app/main/default/objects/Gift__c/fields/Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Date__c</fullName>
    <description>This is the date when the gift was received. On a check, this would be the check date, or with an Electronic Fund Transfer, this would be the date the EFT hit the bank.</description>
    <label>Gift Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>