force-app/main/default/objects/Gift__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <description>This field allows us to specify a gift type for this gift.</description>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gift_Gift_Type</valueSetName>
    </valueSet>
</CustomField>