force-app/main/default/objects/Gift__c/fields/Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value__c</fullName>
    <description>This field holds the monetary value associated with this gift.</description>
    <label>Gift Value</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>