force-app/main/default/objects/Gift__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>This field specifies how the gift was paid for.</description>
    <label>Payment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gift_Payment_Method</valueSetName>
    </valueSet>
</CustomField>