force-app/main/default/objects/Gift__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <description>The post date is when the gift is processed by museum staff.</description>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>