force-app/main/default/objects/Gift__c/fields/RE_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_ID__c</fullName>
    <description>The Raiser's Edge ID of a given gift record. We use this as a sanity check, to make sure any imported records from RE correspond to the appropriate in Salesforce. New records, created post RE import, will not carry any value in this field!</description>
    <label>Raiser's Edge ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>