force-app/main/default/objects/Gift__c/fields/Receipted__c.field-meta.xml
<CustomField>
    <fullName>Receipted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked once the gift has entered the financial system at the Museum.</description>
    <label>Receipted</label>
    <type>Checkbox</type>
</CustomField>