force-app/main/default/objects/Gift__c/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the funds associated with this gift are restricted to a specific use. Leave the box unchecked if the gift is unrestricted.</description>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>