force-app/main/default/objects/Gift__c/fields/WP_ID__c.field-meta.xml
<CustomField>
    <fullName>WP_ID__c</fullName>
    <description>This represents the Wordpress Order ID for a specific gift record. This is used as a sanity check to ensure that those transactions that originated in Wordpress actually have a corresponding order record that displays the specified values.</description>
    <externalId>true</externalId>
    <label>Wordpress ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>